tests-integration/fixtures/checking/197_coercible_higher_kinded_error/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Nothing :: forall (a :: Type). Maybe (a :: Type)
Just :: forall (a :: Type). (a :: Type) -> Maybe (a :: Type)
Nil :: forall (a :: Type). List (a :: Type)
Cons :: forall (a :: Type). (a :: Type) -> List (a :: Type) -> List (a :: Type)
coerceContainerDifferent :: Container Maybe -> Container List

Types
Maybe :: Type -> Type
List :: Type -> Type
Container :: (Type -> Type) -> Type

Data
Maybe
  Quantified = :0
  Kind = :0

List
  Quantified = :0
  Kind = :0


Roles
Maybe = [Representational]
List = [Representational]
Container = [Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Coercible (Maybe (~&0 :: Type)) (List (~&0 :: Type))
  --> 11:1..11:62
   |
11 | coerceContainerDifferent :: Container Maybe -> Container List
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
